--- a/Ableton/css/styles.css
+++ b/Ableton/css/styles.css
@@ -8,16 +8,15 @@ body {
 /* Dando estilos al header */
 nav {
     width: 100%;
-    height: 70px;
+    height: auto;
     display: flex;
     justify-content: space-between;
-    padding-right: 30px;
-    padding-left: 10px;
-    border-bottom: 2px solid rgba(128, 128, 128, 0.253);
+    padding: 6px 20px 11px 10px;
+    border-bottom: 2px solid rgba(128, 128, 128, 0.1);
     box-sizing: border-box;
 }
 .left{
-    width: 55%;
+    width: 55.5%;
 }
 .right{
     width: 25%;
@@ -39,6 +38,11 @@ nav .left, nav .right{
     word-spacing: 5px;
 }
 
+.left .item8 span{
+    font-size: 22px;
+    font-weight: 400;
+}
+
 .right .nav-item .item1{
     font-size: 18px;
     color: #0000ff;
@@ -49,10 +53,12 @@ nav .left, nav .right{
 }
 
 .sub-nav {
-    display: flex;
-    width: 25%;
+    display: grid;
+    grid-template-columns: 65px 60px 1fr;
+    column-gap: 0px;
+    width: 19%;
     justify-content: space-evenly;
-    padding: 20px 0;
+    padding: 27px 40px 27px;
     font-size: 14px;
 }
 
