--- a/Ableton/css/styles.css
+++ b/Ableton/css/styles.css
@@ -1,10 +1,3 @@
-
-/* temporal */
-img { 
-    width: 100px;
-}
-/* _________________________ */
-
 body {
     margin: 0;
     padding: 0;
@@ -79,13 +72,10 @@ main {
     width: 80%;
     margin: 0 auto;
 }
-section.major-image_container, .major-image {
-    width: 100%;
-}
 
 article {
     width: 60%;
-    margin: 100px auto;
+    margin: 200px auto;
     line-height: 30px;
     font-size: 18px;
 }
@@ -96,3 +86,105 @@ h2.title {
 }
 
 /* estilos y posicionamiento de las imágenes y tarjetas */
+img.large-size,
+.card{
+    width: 533px;
+    height: 533px;
+}
+.xl-image {
+    width: 533px;
+    height: 640px;
+}
+ .medium-size{
+    width: 426px;
+    height: 320px;
+}
+section.major-image_container,
+section .img_container,
+.center-img {
+    width: 100%;
+}
+.images-section {
+    height: auto;
+    position: relative;
+    display: flex;
+    justify-content: center;
+}
+div.img_container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+section {
+    position: relative;
+}
+.first-section .color-div{
+    position: absolute;    
+    bottom: 0;
+    right: 0;
+    transform: translate(17%, 100px);
+    z-index: -1;
+    width: 746px;
+    aspect-ratio: 1/1;
+    background-color: #fbffa7;
+}
+
+.section-three .left-img img ~ img {
+    margin-top: 100px;
+}
+
+.section-three .color-div{
+    position: absolute;    
+    top: 0;
+    left: 0;
+    bottom: 0;
+    z-index: -1;
+    transform: translate(-17%, -11.5%);
+    width: 746px;
+    height: 960px;
+    background-color: #b6ffc0;
+}
+.section-five .color-div {
+    width: 853px;
+    height: 746px;
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    z-index: -1;
+    transform: translate(-8.5%, -110px);
+    background-color: #d5b3ff;
+    margin: 0 auto;
+}
+.section-five .right-img {
+    transform: translateX(23%);
+}
+
+.section-six .img_container{
+    align-items: start;
+}
+.card {
+    background-color: #b1c5ff;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    /* align-content: center; */
+}
+
+.card-content{
+    width: 60%;
+    height: 60%;
+    font-size: 22px;
+}
+.card-content h2{
+    font-size: 24px;
+    font-weight: 600;
+    margin-bottom: 30px;
+}
+.card-content a{
+    font-size: 26px;
+    color: #0000ff;
+    text-decoration: none;
+}
+
+/* dando estilos al footer */
