--- a/Ableton/css/styles.css
+++ b/Ableton/css/styles.css
@@ -72,7 +72,6 @@ main {
     width: 80%;
     margin: 0 auto;
     padding-bottom: 100px;
-    border-bottom: 2px solid rgba(128, 128, 128, 0.1);
 }
 
 article {
@@ -88,6 +87,17 @@ h2.title {
 }
 
 /* estilos y posicionamiento de las imágenes y tarjetas */
+.major-image_container {
+    position: relative;
+}
+/* este elemento será agregado con javascript */
+h1{
+    position: absolute;
+    transform: translate(84%, -334%);
+    color: rgb(235, 75, 47);
+    font-size: 108px;
+}
+/* _____________________________ */
 img.large-size,
 .card{
     width: 533px;
@@ -190,3 +200,124 @@ section {
 }
 
 /* dando estilos al footer */
+footer {
+    border-top: 2px solid rgba(128, 128, 128, 0.1);
+    height: auto;
+    font-size: 16px;
+}
+div.footer {
+    width: 83%;
+    margin: 110px auto;
+    height: auto;
+    /* padding: 0 105px; */
+}
+
+.footer > img {
+    width: 190px;
+    margin-bottom: 60px;
+}
+.footer-content {
+    display: flex;
+
+}
+footer h3 {
+    padding: 0;
+    margin: 0 0 10px 0;
+    font-weight: 500;
+}
+.footer-content .glossary {
+    display: grid;
+    width: 55%;
+    grid-template-rows: 1fr 1fr;
+    row-gap: 50px;
+    /* flex-flow: column; */
+    /* justify-content: space-between; */
+    /* height: 330px; */
+}
+.one-content > a,
+.two-content > a{
+    display: block;
+    text-decoration: none;
+    color: black;
+    margin-bottom: 10px;
+    font-size: 16px;
+}
+ion-icon {
+    color: white;
+    font-size: 26px;
+}
+.facebook {
+    background-color: #3477f2;
+}
+.twitter {
+    background-color: #1da1f2;
+}
+.youtube {
+    background-color: #ff001d;
+}
+.instagram {
+    background-color: #f77737;
+}
+div.container-select{
+    display: grid;
+    grid-template-columns: 40% 60%;
+}
+.container-select select {
+    height: 30px;
+    border: none;
+}
+
+.sign p {
+    padding: 0;
+    margin: 0 0 20px 0;
+}
+
+form {
+    display: grid;
+    grid-template-columns: 70% 30%;
+}
+
+input#email-input {
+    grid-column: 1;
+    width: 100%;
+    height: 40px;
+    background-color: #eeeeee;
+    font-size: 18px;
+    border:  none;
+}
+
+button#btn {
+    grid-column: 2;
+    height: 40px;
+    width: 100%;
+    font-size: 18px;
+    border: none;
+    background-color: #0000ff;
+    color: white;
+}
+
+#btn:hover {
+    cursor: pointer;
+}
+.footer-info_container {
+    display: flex;
+    justify-content: space-between;
+}
+
+.footer-info_container a {
+    color: black;
+    text-decoration: none;
+    font-size: 12px;
+    font-weight: 500;
+    margin-right: 10px;
+}
+
+.footer-info_container {
+    position: relative;
+}
+
+.footer-info_container .footer-info_b span:last-child {
+    position: absolute;
+    transform: translateY(-1px);
+    margin-left: 10px;
+}
